# CodecDB

./: README.md
encoding_selection/: README.md  high_unmatch  pom.xml
encoding_selection/columns/: .gitignore  README
encoding_selection/src/main/jflex/: lexer.jflex
encoding_selection/src/main/matlab/classification/: decision_tree.m  int_class.csv  integer.mat  str_class.csv  string.mat
encoding_selection/src/main/nnmodel/int_model/: saved_model.pb
encoding_selection/src/main/nnmodel/string_model/: saved_model.pb
encoding_selection/src/main/python/encsel/: dataset.py  important_var.py  train.py  train_deep.py
encoding_selection/src/main/python/example/: mnist_deep.py  mnist_softmax.py  tf_lstm.py  tf_mnist.py
encoding_selection/src/main/resources/: config.properties  log4j.xml  logback.xml
encoding_selection/src/main/resources/word/: abbrv.txt  google_10000.txt  plural.txt  top_5000.csv
encoding_selection/src/main/scala/codecdb/: Config.scala
encoding_selection/src/main/shell/: daily_db_backup.sh
encoding_selection/src/main/sql/: create_schema.sql  int_train_ds.sql  string_train_ds.sql
encoding_selection/src/main/sql/classify/: train_data_double.sql  train_data_int.sql  train_data_int_100k.sql  train_data_int_10k.sql  train_data_int_1m.sql  train_data_string.sql  train_data_string_100k.sql  train_data_string_10k.sql  train_data_string_1m.sql
encoding_selection/src/main/sql/regression/: ratio_double.sql  ratio_int.sql  ratio_string.sql
encoding_selection/src/main/sql/report/: compress_dbl.sql  compress_int.sql  compress_str.sql  enc_gen_time_int.sql  gen_compress_time.sql  gen_scan_enc_time.sql  scan_compress_time.sql  scan_enc_int.sql  subattr_ben_predict.sql
encoding_selection/src/main/sql/report_new/: scan_speed_size_double.sql  scan_speed_size_int.sql  scan_speed_size_string.sql
encoding_selection/src/test/python/: dataset_test.py
encoding_selection/src/test/resource/coldata/: bitlength_test  test_bp_int  test_col_boolean.data  test_col_double.data  test_col_long.data  test_col_similarword.data  test_col_str.data  test_col_str2.data
encoding_selection/src/test/resource/colsplit/: column  column.0  column.1  column.2  column.3  column.unmatch  double_col  double_col.0  double_col.1  realdata1  realdata1.0  realdata1.3  realdata1.4  realdata1.6  realdata1.7  realdata2  realdata2.0  realdata2.2  realdata2.3  realdata2.4  realdata2.5
encoding_selection/src/test/resource/encoding/: bitvector_encoded  bitvector_input
encoding_selection/src/test/resource/feature/: test_col_avgrl.data  test_col_sparsity.data
encoding_selection/src/test/resource/filefmt/: content.csv  content.schema  test_col_reader.csv  test_col_reader.schema  test_col_reader_xlsx.schema  test_col_reader_xlsx.xlsx  test_csv_parser.csv  test_csv_parser.schema  test_json_parser.json  test_json_parser.schema  test_tsv_parser.tsv  test_xlsx_parser.schema  test_xlsx_parser.xlsx
encoding_selection/src/test/resources/: config.properties
engine/: CMakeLists.txt  README.md
engine/cmake_modules/: BuildUtils.cmake  SetupCxxFlags.cmake  san-config.cmake
engine/src/arrow/ipc/: metadata_internal.cc
engine/src/arrow/util/: bit_stream_utils.h  rle_encoding.h
engine/src/lqf/: CMakeLists.txt  agg.cc  agg.h  agg_backup.cc.bak  agg_backup.h.bak  agg_benchmark.cc  agg_test.cc  bitmap.cc  bitmap.h  bitmap_benchmark.cc  bitmap_test.cc  concurrent.cc  concurrent.h  container.cc  container.h  container_benchmark.cc  container_test.cc  data_container.cc  data_container.h  data_container_benchmark.cc  data_container_test.cc  data_model.cc  data_model.h  data_model_test.cc  dict.cc  dict.h  dict_test.cc  executor_test.cc  filter.cc  filter.h  filter_executor.cc  filter_executor.h  filter_test.cc  hash.cc  hash.h  hash_container.cc  hash_container.h  hash_container_benchmark.cc  hash_container_test.cc  heap.h  (+38 more)
engine/src/lqf/tpch/: CMakeLists.txt  agg_dict_benchmark.cc  agg_stripe_benchmark.cc  file_explore.cc  filter_in_benchmark.cc  filter_onecol_benchmark.cc  filter_twocol_benchmark.cc  join_con_benchmark.cc  query1.cc  query10.cc  query11.cc  query12.cc  query13.cc  query14.cc  query15.cc  query16.cc  query17.cc  query18.cc  query19.cc  query2.cc  query20.cc  query21.cc  query22.cc  query3.cc  query4.cc  query5.cc  query6.cc  query7.cc  query8.cc  query9.cc  threadsanitizer_exp.cc  tpchquery.cc  tpchquery.h  tpchquery_benchmark.cc  tpchquery_dev.cc
engine/src/parquet/: CMakeLists.txt  column_reader.cc  column_reader.h  column_reader_skip_test.cc  column_reader_test.cc  encoding.cc  encoding.h  encoding_deltabp_test.cc  encoding_test.cc  types.h
engine/src/sboost/: CMakeLists.txt
engine/src/sboost/encoding/: deltabp_test.cc
engine/tools/monitor/: PrestoMonitor.java  cpumon_presto.sh  cpumon_vertica.sh  memmon_presto.sh  memmon_vertica.sh  pidstat_sample.txt  vertica_memusg.sql
engine/tpch_sql/: demon.py
engine/tpch_sql/monetdb/create/: customer.sql  lineitem.sql  nation.sql  orders.sql  part.sql  partsupp.sql  region.sql  supplier.sql
engine/tpch_sql/monetdb/query/: q1.sql  q10.sql  q11.sql  q12.sql  q15.sql  q18.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
engine/tpch_sql/presto/create/: customer.sql  lineitem.sql  nation.sql  orders.sql  part.sql  partsupp.sql  region.sql  supplier.sql
engine/tpch_sql/presto/query/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql  tpch_q10  tpch_q11  tpch_q12  tpch_q8  tpch_q9
engine/tpch_sql/vertica/create/: customer.sql  lineitem.sql  nation.sql  orders.sql  part.sql  partsupp.sql  region.sql  supplier.sql
engine/tpch_sql/vertica/create_local/: customer.sql  lineitem.sql  nation.sql  orders.sql  part.sql  partsupp.sql  region.sql  supplier.sql
engine/tpch_sql/vertica/query/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql  time.sql
(+478 files in other folders)
